<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="land.map.feature.presentation.ui.fragmentes.HomeFragment">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_show_all_car_on_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:text="@string/show_all_car_on_list"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@id/btn_show_all_car_on_map"
            app:layout_constraintStart_toStartOf="@id/btn_show_all_car_on_map"
            app:layout_constraintEnd_toEndOf="@id/btn_show_all_car_on_map"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_show_all_car_on_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:text="@string/show_all_car_on_map"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@id/btn_get_capture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_show_all_car_on_list" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_get_capture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_button"
            android:padding="10dp"
            android:text="@string/get_capture"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_show_all_car_on_map"
            app:layout_constraintStart_toStartOf="@id/btn_show_all_car_on_map"
            app:layout_constraintTop_toBottomOf="@id/btn_show_all_car_on_map" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>